# phase

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  bytecode-interpretation-from-scratch.md  chunk-reading-in-c.md  run  transpiler.c
.github/workflows/: ci.yml
examples/: conditionals.phase  fibonacci.phase  full_demo.phase  functions.phase  helloworld.phase  loops.phase  state_machine.phase  variables.phase
src/: codegen.c  codegen.h  colours.h  errors.c  errors.h  lexer.c  lexer.h  main.c  parser.c  parser.h
tests/: apostrophe_string.phase  arithmetic.phase  compound_assign.phase  if_else.phase  invalid_token_global.phase  logic.phase  missing_expression.phase  missing_paren.phase  missing_return.phase  multiple_entry.phase  no_entry.phase  open_string.phase  type_mismatch.phase  undefined_var.phase  while_basic.phase  wrong_var_init_count.phase
